[package]
name = "pg2sqlite2pg"
version = "0.1.0"
authors = ["Andrew Yourtchenko <ayourtch@gmail.com>"]

[dependencies]
time = "*"
regex = "*"
git2 = "*"
md5 = "*"

argparse = "0.2.1"
log="*"
slog="*"
slog-term="*"
slog-stream="*"
slog-stdlog="*"
rand = "0.3"
rust-ini = "0.9"

rusqlite = "*"

dotenv = "0.9.0"
postgres = { version = "*", features = ["with-chrono-0_4"] }

chrono = "*"
